# indico-push-notifications

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CHECK_ENTRY_POINT.md  CHECK_PLUGIN_LOADING.md  HOW_TO_CHECK_PLUGIN.md  IMMEDIATE_ACTIONS.md  LOGGING_GUIDE.md  MANIFEST.in  QUICK_DEBUG.md  README.md  README_DEVELOPMENT.md  README_TROUBLESHOOTING.md  SERVER_CONTEXT.md  alembic.ini  check_entry_point.sh  check_plugin.sh  check_plugin_status.sh  check_server_plugin.sh  debug_plugin.sh  install_and_test.sh  local_check.py  one_line_check.sh  pyproject.toml  quick_check.sh  quick_status_commands.md  requirements.txt  setup.py  setup_logging.sh  setup_server.sh  sync_missing_files.sh  test_alembic.py  test_entry_point.py  test_logging.py
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_migration.py
indico_push_notifications/: __init__.py  blueprint.py  controllers.py  example_usage.py  forms.py  logger.py  models.py  notifications.py  telegram_bot.py  webpush.py
indico_push_notifications/static/: push-manager.js  service-worker.js
indico_push_notifications/templates/: push_script.js  user_preferences.html
indico_push_notifications/tests/: conftest.py  test_basic.py
