[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indico-push-notifications"
version = "1.0.0"
description = "Push notifications plugin for Indico (Telegram and Web Push)"
readme = "README.md"
authors = [
    {name = "CERN", email = "indico-team@cern.ch"}
]
license = {text = "MIT"}
keywords = ["indico", "plugin", "push", "notifications", "telegram", "webpush"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-telegram-bot>=20.0",
    "pywebpush>=1.14.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/indico/indico-plugins"
Bug-Tracker = "https://github.com/indico/indico-plugins/issues"
Documentation = "https://docs.getindico.io/en/stable/plugins/push-notifications/"
Source = "https://github.com/indico/indico-plugins/tree/master/indico-push-notifications"

[project.entry-points."indico.plugins"]
indico_push_notifications = "indico_push_notifications:IndicoPushNotificationsPlugin"

[tool.setuptools]
packages = ["indico_push_notifications"]
include-package-data = true
package-dir = { "indico_push_notifications" = "indico_push_notifications" }

[tool.setuptools.package-data]
indico_push_notifications = [
    "indico_push_notifications/templates/*.html",
    "indico_push_notifications/templates/*.js",
    "indico_push_notifications/static/*.js",
    "indico_push_notifications/alembic/*.py",
    "indico_push_notifications/alembic/*.ini",
    "indico_push_notifications/alembic/*.mako",
    "indico_push_notifications/alembic/versions/*.py",
]
